--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   image_picker: ^1.1.2
   hive_flutter: ^1.1.0
   hive: ^2.2.3
+  intl: ^0.19.0
+  date_picker_timeline: ^1.2.6
 
 dev_dependencies:
   flutter_test:
